Updated teams and players in leagues.
